# Tweepify

TweetCampaigner/: Readme.md  app.py  celery_app.py  cookies.txt  models.py  pyproject.toml  replit.md  routes.py  tasks.py
TweetCampaigner/services/: ai_service.py  analytics_service.py  campaign_service.py  twitter_service.py
TweetCampaigner/static/css/: style.css
TweetCampaigner/static/js/: main.js
TweetCampaigner/templates/: analytics.html  base.html  campaigns.html  create_campaign.html  dashboard.html  index.html  login.html  register.html  settings.html
